css/ckeditor_widgets.css
/* Bootstrap styles */
.row {
  /*margin-left: -15px;
  margin-right: -15px;*/
}
.row:before, .row:after {
  content: " ";
  display: table;
}
.row:after {
  clear: both;
}
.row div:first-child{
	padding-left: 0;
}
.row div:last-child {
	padding-right: 0;
}

.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
  position: relative;
  min-height: 1px;
  float: left;
  padding: 15px;
  box-sizing: border-box;
  -moz-box-sizing: border-box;
}
.col-md-6 {
  width: 50%;
}
.col-md-3 {
  width: 25%;
}
.col-md-9 {
  width: 75%;
}
.col-md-4 {
  width: 33.3%;
}

/* Custom styles */
.col-md-6 img,
.col-md-3 img,
.col-md-4 img,
.col-md-9 img {
  display: block;
  max-width: 100%;
  height: auto;
}
.two-col,
.two-col-left,
.two-col-right,
.three-col,
.accordion {
	/*padding: 8px;
	margin: 10px auto;
	background: #eee;
	border-radius: 8px;
	border: 1px solid #ddd;
	box-shadow: 0 1px 1px #fff inset, 0 -1px 0px #ccc inset;*/
}
.two-col .col-md-6,
.two-col-left .col-md-3,
.two-col-left .col-md-9,
.two-col-right .col-md-3,
.two-col-right .col-md-9,
.three-col .col-md-4,
.accordion dd .content,
.accordion dd.accordion-navigation>a {
	/*box-shadow: 0 1px 1px #ddd inset;*/
	/*border: 1px solid #cccccc;*/
	/*border-radius: 5px;*/
	/*background: #fff;*/
	min-height: 5em;
}
.two-col .col-md-6,
.two-col-left .col-md-3,
.two-col-left .col-md-9,
.two-col-right .col-md-3,
.two-col-right .col-md-9 {
	margin: -3px;
}
.two-col-right .col-sidebar,
.two-col-left .col-sidebar {
	padding: 15px 0;
}
.two-col .col-2 {
  margin-left: 9px;
}
.three-col .col-1 {
	margin-left: -3px;
}
.three-col .col-2 {
	margin-left: 3px;
}
.three-col .col-3 {
	margin-left: 3px;
  margin-right: -3px;
}
.two-col-left .col-md-9{
  /*margin-left: 8px;*/
}
.two-col-right .col-md-9{
  /*margin-right: 8px;*/
}
.two-col-left .col-sidebar,
.two-col-right .col-md-9{
	margin: 0;
}

.accordion {
	padding-top: 2px;
}
.accordion:before {
	content: 'Accordion';
	text-transform: uppercase;
	padding-bottom: 4px;
	font-size: 10px;
	color: #888;
}
.accordion dd.accordion-navigation > .content,
.accordion dd > .content {
	display: block !important;
}
.accordion dd.accordion-navigation {
	margin-bottom: .7em !important;
}
.accordion dd.accordion-navigation>a {
	padding: 5px;
	background: #ddd;
	min-height: 0;
	margin-bottom: 1px;
}
.accordion dd.accordion-navigation>a p {
	margin: 0;
}

.box,
.quotebox {
	padding: 8px;
	margin: 10px auto;
/*	background: #eee;
	border-radius: 8px;
	border: 1px solid #ddd;
	box-shadow: 0 1px 1px #fff inset, 0 -1px 0px #ccc inset;*/
}
.box .box-title,
.box .box-content,
.quotebox .quote,
.quotebox .byline {
	/*box-shadow: 0 1px 1px #ddd inset;
	border: 1px solid #cccccc;
	border-radius: 5px;
	background: #fff;*/
	margin-left: 0;
	margin-right: 0;
	padding: 2px 5px;
}
.quotebox .byline {
	text-align: right;
	font-style: italic;
}

.box .box-content,
.quotebox .quote {
	/*min-height: 3em;*/
}

.box .box-title p,
.quotebox .byline p {
	margin-bottom: 0;
}


.box .box-title {
	background: #ddd;
}
.box .row {
	margin-left: 0;
	margin-right: 0;
}

.quotebox {
	background: #efefef url(../images/postquote.png) 5px 2px no-repeat;
    border: 1px solid #785fa0;
}
.quotebox .quote {
	margin-left: 20px;
	margin-bottom: 5px;
	font-size: 1.2em;
}

.panel {
	border: 1px solid #785fa0;
	background-color: #efefef;
	padding: 8px;
}
.panel .panel-heading {
	text-align: center;
    font-size: 1.2em;
    font-weight: bold;
}

